2006-12-11  Juanma Barranquero  <lekktu@gmail.com>

	* subr.el (unread-command-char): Reformat obsolescence info.

2006-12-11  Richard Stallman  <rms@gnu.org>

	* emacs-lisp/cl-macs.el (defstruct): Suppress warnings
	about calls to cl-struct-setf-expander.

2006-12-11  Juanma Barranquero  <lekktu@gmail.com>

	* ediff-merg.el (ediff-show-clashes-only): Doc fix.
	(ediff-combination-pattern): Fix typo in docstring.

	* textmodes/refer.el (refer-find-entry): Doc fix.
	(refer-bib-files-regexp, refer-bib-directory, refer-bib-files)
	(refer-cache-bib-files, refer-find-next-entry, refer-yank-key):
	Fix tipos in docstrings.

	* progmodes/idlwave.el (idlwave-library-path): Fix typos in docstring.

2006-12-10  Kim F. Storm  <storm@cua.dk>

	* ido.el (ido-init-completion-maps): Remap backward-kill-word
	instead of binding M-backspace.

2006-12-10  Juanma Barranquero  <lekktu@gmail.com>

	* replace.el (replace-match-data, replace-match-maybe-edit):
	* calc/calc-aent.el (calc-eval-error):
	* emulation/vi.el (vi-char-argument):
	* progmodes/cc-langs.el (c-at-vsemi-p-fn)
	(c-vsemi-status-unknown-p-fn): Doc fixes.

2006-12-10  Chong Yidong  <cyd@stupidchicken.com>

	* menu-bar.el (menu-bar-showhide-menu, menu-bar-tools-menu)
	(menu-bar-help-menu): Tooltip fixes.  Suggested by Francis Wright.

2006-12-10  Masatake YAMATO  <jet@gyve.org>

	* progmodes/ld-script.el (ld-script-keywords): Fix a typo.

2006-12-09  Chong Yidong  <cyd@stupidchicken.com>

	* mouse-sel.el (mouse-sel-mode): Register mouse-2 as a click type.

	* man.el (Man-xref-button-action): New function.  If the
	`Man-target-string' button property is a function, assume it
	accepts a position argument.
	(Man-abstract-xref-man-page): Use it.
	(Man-default-man-entry): New optional arg POS.

	* wdired.el (wdired-preprocess-symlinks): Make the spaces after
	symlink arrows read-only and non-rear-sticky.

2006-12-09  Martin Rudalics  <rudalics@gmx.at>

	* wdired.el (wdired-change-to-wdired-mode, wdired-finish-edit)