@@ -1,3 +1,7 @@
+2006-12-12  Stefan Monnier  <monnier@iro.umontreal.ca>
+
+	* emacs-lisp/syntax.el (syntax-ppss-toplevel-pos): New fun.
+
 2006-12-11  Juanma Barranquero  <lekktu@gmail.com>
 
 	* subr.el (unread-command-char): Reformat obsolescence info.
